Cluster Actions tab localization
Change-Id: I382e0ecbe69b63179c168f4bbca1ced20ac326ce
Implements: blueprint ui-localization-cluster-actions

--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -58,6 +58,16 @@
                 "cluster_status_operational": "Operational",
                 "cluster_status_error": "Error",
                 "cluster_status_removing": "Removing"
+            },
+            "cluster_page": {
+                "actions_tab": {
+                    "title": "Actions",
+                    "rename_environment": "Rename Environment",
+                    "delete_environment": "Delete Environment",
+                    "bt_rename": "Rename",
+                    "bt_delete": "Delete",
+                    "alert_delete": "Clean up each node and return it to the pool of unallocated nodes."
+                }
             }
         }
     },
