--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -73,6 +73,17 @@
                     "bt_rename": "Rename",
                     "bt_delete": "Delete",
                     "alert_delete": "Clean up each node and return it to the pool of unallocated nodes."
+                },
+                "healthcheck_tab": {
+                    "title": "OpenStack Health Check",
+                    "select_all": "Select All",
+                    "button_run_tests": "Run Tests",
+                    "button_stop_tests": "Stop Tests",
+                    "alert_deploy": "You must deploy your new OpenStack environment before running tests against it.",
+                    "alert_not_available": "OSTF server is not available.",
+                    "expected_duration": "Expected Duration",
+                    "actual_duration": "Actual Duration",
+                    "status": "Status"
                 }
             },
             "capacity_page": {
@@ -323,8 +334,8 @@
                 "healthcheck_tab": {
                     "title": "OpenStack健康检查",
                     "select_all": "选择全部",
-                    "bt_run_tests": "运行测试",
-                    "bt_stop_tests": "停止测试",
+                    "button_run_tests": "运行测试",
+                    "button_stop_tests": "停止测试",
                     "alert_deploy": "在测试之前必须先部署新的OpenStack环境",
                     "alert_not_available": "OSTF服务不可用"
                 },
