--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -2,7 +2,8 @@
     "en-US": {
         "translation": {
             "common": {
-                "title": "Fuel Dashboard"
+                "title": "Fuel Dashboard",
+                "not_available": "N/A"
             },
             "navbar": {
                 "environments": "Environments",
@@ -88,11 +89,37 @@
                 "nodes_with_config": "Number of nodes with this configuration",
                 "download_report": "Download report",
                 "loading": "Loading..."
+            },
+            "dialog": {
+                "show_node": {
+                    "label_manufacturer": "Manufacturer",
+                    "label_mac_address": "MAC Address",
+                    "label_fqdn": "FQDN",
+                    "ssh_console": "SSH console",
+                    "bt_network_configuration": "Configure Interfaces",
+                    "bt_disk_configuration": "Configure Disks",
+                    "bt_close": "Close",
+                    "total": "total",
+                    "bytes": "bytes",
+                    "drive": "drive",
+                    "drive_plural": "drives"
+                }
             }
         }
     },
     "zh-CN": {
         "translation": {
+            "common": {
+                "title": "",
+                "not_available": ""
+            },
+            "node_details": {
+                "cpu": "",
+                "system": "系统",
+                "memory": "内存",
+                "disks": "磁盘",
+                "interfaces": "接口"
+            },
             "navbar": {
                 "environments": "环境",
                 "releases": "版本",
@@ -448,10 +475,7 @@
                 "show_node": {
                     "label_manufacturer": "设备：",
                     "label_mac_address": "MAC地址：",
-                    "system": "系统",
-                    "memory": "内存",
-                    "disks": "磁盘",
-                    "interfaces": "接口",
+                    "label_fqdn": "",
                     "bt_close": "关闭",
                     "product": "产品",
                     "family": "系列",
@@ -472,7 +496,14 @@
                     "current speed": "当前速度",
                     "netmask": "网络掩码",
                     "bt_network_configuration": "网络配置",
-                    "bt_disk_configuration": "磁盘配置"
+                    "bt_disk_configuration": "磁盘配置",
+                    "mac" : "",
+                    "ip" : "",
+                    "bytes": "",
+                    "undefined": "",
+                    "fqdn": "",
+                    "drive": "",
+                    "drive_plural": ""
                 },
 
                 "discard_changes": {
