Data-bindings for node list buttons try
getting rid of crutches

Change-Id: I2d5bcc6d65f356ec1ad6635b56792eb89562811b

--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -11,6 +11,7 @@
                 "delete_button": "Delete",
                 "save_settings_button": "Save Settings",
                 "cancel_button": "Cancel",
+                "apply_changes_button": "Apply Changes",
                 "not_available": "N/A",
                 "network": {
                     "fixed": "VM Networks (Fixed)",
@@ -107,6 +108,11 @@
                     "configure_disks": {
                         "title": "Configure disks on __name__",
                         "title_plural": "Configure disks on __count__ nodes"
+                    },
+                    "node_management_panel":{
+                        "group_by": "Group By",
+                        "edit_roles_button": "Edit Roles",
+                        "add_nodes_button": "Add Nodes"
                     },
                     "back_to_nodes_button": "Back To Node List",
                     "discovered": "Discovered",
