Data-bindings for node list buttons try
Change-Id: I2d5bcc6d65f356ec1ad6635b56792eb89562811b

--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -161,6 +161,11 @@
                         },
                         "edit_name": "Edit Name"
                     },
+                    "node_management_panel":{
+                        "group_by": "Group By",
+                        "edit_roles_button": "Edit Roles",
+                        "add_nodes_button": "Add Nodes"
+                    },
                     "back_to_nodes_button": "Back To Node List",
                     "unallocated_nodes": "Unallocated Nodes",
                     "no_selected_nodes": "There are no selected nodes to edit.",
