Discard settings confirmation dialog localization
Change-Id: Ib84979fb7ddbb5278a3efabdfdccaad9a4e597e9
Implements: blueprint ui-localization-confirm-discard-changes

--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -88,6 +88,16 @@
                 "nodes_with_config": "Number of nodes with this configuration",
                 "download_report": "Download report",
                 "loading": "Loading..."
+            },
+            "dialog": {
+                "dismiss_settings": {
+                    "title": "Confirm",
+                    "important": "Important",
+                    "bt_stay": "Stay on page",
+                    "bt_leave": "Leave page and discard changes",
+                    "default_msg": "Settings were modified but not saved. Do you want to discard your changes and leave the page?",
+                    "verify_msg": "Network verification is in progress. You should save changes or stay on the tab."
+                }
             }
         }
     },
