--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -142,31 +142,6 @@
                 "download_report": "Download report",
                 "loading": "Loading..."
             },
-            "display_changes" :{
-                "title": "Deploy Changes",
-                "added_node": "Added __nodesCount__ node.",
-                "added_node_plural": "Added __nodesCount__ nodes.",
-                "deleted_node": "Deleted __nodesCount__ node.",
-                "deleted_node_plural":  "Deleted __nodesCount__ nodes.",
-                "reconfigured_node": "Reconfigured roles of  __nodesCount__ node.",
-                "reconfigured_node_plural": "Reconfigured roles of  __nodesCount__ nodes.",
-                "settings_changes": {
-                    "attrs": "OpenStack settings",
-                    "networks": "Network settings",
-                    "disks": "Changed disk configuration of the following nodes:"
-                },
-                "warnings": {
-                    "controller": "Environment should have __nodeSize__ controller node",
-                    "controller_plural": "Environment should have __nodeSize__ controller nodes",
-                    "compute": "Compute nodes are recommended for deployment"
-                },
-                "changed_task_name": "Changed __item__",
-                "changed": "Changed",
-                "deleted": "Deleted",
-                "cancel": "Cancel",
-                "deploy": "Deploy",
-                "redeployment_needed": "Some nodes have error status after deployment. Redeployment is needed."
-            },
             "dialog": {
                 "create_cluster_wizard": {
                     "title": "Create a new OpenStack environment",
@@ -223,6 +198,39 @@
                         "deploy": "Deploy Changes",
                         "env": "Environments"
                     }
+                },
+                "display_changes": {
+                    "title": "Deploy Changes",
+                    "added_node": "Added __nodesCount__ node.",
+                    "added_node_plural": "Added __nodesCount__ nodes.",
+                    "deleted_node": "Deleted __nodesCount__ node.",
+                    "deleted_node_plural":  "Deleted __nodesCount__ nodes.",
+                    "reconfigured_node": "Reconfigured roles of  __nodesCount__ node.",
+                    "reconfigured_node_plural": "Reconfigured roles of  __nodesCount__ nodes.",
+                    "settings_changes": {
+                        "attrs": "OpenStack settings",
+                        "networks": "Network settings",
+                        "disks": "Changed disk configuration of the following nodes:"
+                    },
+                    "warnings": {
+                        "controller": "Environment should have __nodeSize__ controller node",
+                        "controller_plural": "Environment should have __nodeSize__ controller nodes",
+                        "compute": "Compute nodes are recommended for deployment"
+                    },
+                    "changed_task_name": "Changed __item__",
+                    "changed": "Changed",
+                    "deleted": "Deleted",
+                    "cancel": "Cancel",
+                    "deploy": "Deploy",
+                    "redeployment_needed": "Some nodes have error status after deployment. Redeployment is needed."
+                },
+                "dismiss_settings": {
+                    "title": "Confirm",
+                    "important": "Important",
+                    "stay_button": "Stay on page",
+                    "leave_button": "Leave page and discard changes",
+                    "default_message": "Settings were modified but not saved. Do you want to discard your changes and leave the page?",
+                    "verify_message": "Network verification is in progress. You should save changes or stay on the tab."
                 },
                 "show_node": {
                     "manufacturer_label": "Manufacturer",
@@ -559,10 +567,10 @@
                 "dismiss_settings": {
                     "title": "确认",
                     "important": "重要",
-                    "bt_stay": "留在本页",
-                    "bt_leave": "离开并放弃变更",
-                    "default_msg": "设置变更未保存，您想放弃变更并离开么？",
-                    "verify_msg": "正在进行网络验证，您应该保存变更或留在本页"
+                    "stay_button": "留在本页",
+                    "leave_button": "离开并放弃变更",
+                    "default_message": "设置变更未保存，您想放弃变更并离开么？",
+                    "verify_message": "正在进行网络验证，您应该保存变更或留在本页"
                 },
 
                 "rhel_license": {
