--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -88,6 +88,16 @@
                 "nodes_with_config": "Number of nodes with this configuration",
                 "download_report": "Download report",
                 "loading": "Loading..."
+            },
+            "dialog": {
+                "dismiss_settings": {
+                    "title": "Confirm",
+                    "important": "Important",
+                    "button_stay": "Stay on page",
+                    "button_leave": "Leave page and discard changes",
+                    "default_message": "Settings were modified but not saved. Do you want to discard your changes and leave the page?",
+                    "verify_message": "Network verification is in progress. You should save changes or stay on the tab."
+                }
             }
         }
     },
@@ -398,10 +408,10 @@
                 "dismiss_settings": {
                     "title": "确认",
                     "important": "重要",
-                    "bt_stay": "留在本页",
-                    "bt_leave": "离开并放弃变更",
-                    "default_msg": "设置变更未保存，您想放弃变更并离开么？",
-                    "verify_msg": "正在进行网络验证，您应该保存变更或留在本页"
+                    "button_stay": "留在本页",
+                    "button_leave": "离开并放弃变更",
+                    "default_message": "设置变更未保存，您想放弃变更并离开么？",
+                    "verify_message": "正在进行网络验证，您应该保存变更或留在本页"
                 },
 
                 "rhel_license": {
