--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -26,6 +26,10 @@
             "notifications_page": {
                 "title": "Notifications"
             },
+            "notifications_popover": {
+                "view_all": "View all",
+                "no_notifications_text": "There are no notifications to display"
+            },
             "support_page": {
                 "title": "Support",
                 "contact_text": "Do not hesitate to report a problem or suggest an improvement by clicking the button below. We will get back to you as soon as possible.",
